# dag

./: AGENTS.md  README.md  pyproject.toml
src/trading_dsl_engine/: __init__.py  compiler.py  dsl.py  engine.py  ops.py  parser.py  registry.py
tests/: test_builder_and_runtime.py  test_dsl_composition.py  test_parser.py  test_performance.py
