[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_dsl_engine"
version = "0.1.0"
description = "Numba-compiled streaming DSL engine for trading features"
requires-python = ">=3.10"
dependencies = ["numpy", "numba"]

[tool.pytest.ini_options]
testpaths = ["tests"]

markers = ["perf: performance tests"]
